# OpenStack-Swift-Ringinfo-Client

./: AUTHORS  MANIFEST  MANIFEST.in  PKG-INFO  README  setup.cfg  setup.py
example/: test_case.py
ringinfoclient/: iqiyiring.py  ringmanagement.py
