[files]
packages = 
	ringinfoclient

[pbr]
skip_changelog = True
skip_authors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[metadata]
description-file = README
name = ringinfoclient
author = Jianfeng Xu
home-page = http://scm.qiyi.virtual/cloudstorage/ringinfo-client
summary = iQIYI Ringinfo-Client
version = 0.1.0
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
author-email = xujianfeng_sx@qiyi.com
